if(enable-projects-directory)
  include_directories(${ROSE_INCLUDES})

  ###################################################################################################################
  # Some projects are disabled by commenting them out even when projects in general are enabled. This is done when a
  # project is not portable, does not pass testing, or is no longer maintained.  If you are the project owner, please
  # test your project and re-enable it.
  ###################################################################################################################

  #add_subdirectory(arrayOptimization)
  add_subdirectory(AstEquivalence)
  #add_subdirectory(autoParallelization)
  add_subdirectory(BabelPreprocessor)
  add_subdirectory(BinaryAnalysisTools)
  add_subdirectory(BinaryCloneDetection)
  add_subdirectory(binaryVisualization)
  add_subdirectory(bugSeeding)
  #add_subdirectory(CertSecureCodeProject)
  #add_subdirectory(checkPointExample)
  add_subdirectory(CloneDetection)
  add_subdirectory(compass2)
  add_subdirectory(C_to_Promela)
  add_subdirectory(DataFaultTolerance)
  add_subdirectory(DatalogAnalysis)
  # add_subdirectory(DocumentationGenerator)
  add_subdirectory(extractMPISkeleton)
  #add_subdirectory(FiniteStateModelChecker)
  add_subdirectory(Fortran_to_C)
  add_subdirectory(graphColoring)
  #add_subdirectory(HeaderFilesInclusion)

  #add_subdirectory(highLevelGrammars)
  #add_subdirectory(javaport)
  #add_subdirectory(MacroRewrapper)
  add_subdirectory(ManyCoreRuntime)
  add_subdirectory(MatrixTestingProject)
  #add_subdirectory(minitermite)
  add_subdirectory(mint)
  add_subdirectory(MPI_Tools)
  add_subdirectory(OpenMP_Analysis)
  add_subdirectory(OpenMP_Checker)
  add_subdirectory(PolyhedralModel)
  add_subdirectory(PowerAwareCompiler)
  add_subdirectory(pragmaParsing)
  add_subdirectory(programModeling)
  add_subdirectory(QtDesignerPlugins)
  add_subdirectory(RoseQt)
  #add_subdirectory(roseToLLVM)
  #add_subdirectory(RTC)
  add_subdirectory(taintcheck)
  add_subdirectory(UpcTranslation)
endif()
